update logic operator test

--- a/module2/logic operator/test.html
+++ b/module2/logic operator/test.html
@@ -9,7 +9,7 @@
 
 
     <script>
-        let login = prompt('укажите логин:');
+        let login = prompt('кто там?');
 
         if (login == '' || login == null) {
             alert('отменено');
@@ -20,8 +20,8 @@
 
             if (pass == '' || pass == null) {
                 alert('отменено');
-            } else if (pass == 'я главный') {
-                alert('здравствуйте!');
+            } else if (pass == 'даня') {
+                alert('ку');
             } else {
                 alert('неверный пароль');
             }
