--- a/module1/if. else/task1.html
+++ b/module1/if. else/task1.html
@@ -5,10 +5,11 @@
 
 <body>
     <script>
-        if ("0") {
-            alert('Привет');
+        let user = {
+            name: "John",
+            age: 30,
         }
-
+        console.log(user.name,user.age)
     </script>
 </body>
 
