--- a/task.html
+++ b/task.html
@@ -1,27 +1,76 @@
+<!DOCTYPE html>
 <html>
 
 <head>
+
+    <style>
+
+    </style>
 </head>
+<select id='select'>
+</select>
+<input type="submit" value="+" onclick="addCity()">
+<table border="1" id='table'>
+    <tr>
+        <td>name</td>
+        <td>temp</td>
+        <td>wind</td>
+    </tr>
+</table>
 
 <body>
-  <script>
-    let txt1 = prompt('first');
-    let txt2 = prompt(`second`);
-    let pos1 = +prompt('с какого индекса');
-    let len1 = +prompt('сколько букв');
-    let pos2 = +prompt('куда вставить');
-    let a = txt2.slice(0, pos2);
-    let b = txt1.slice(pos1, pos1 + len1);
-    let c = txt2.slice(pos2);
 
-    let txt3 = a + b + c;
-    console.log(a);
-    console.log(b);
-    console.log(c);
 
-    console.log(txt3);
+    <script src="D:\danila\Projects\javascript.learn\data.js"></script>
+    <script>
+        let data = getData();
 
-  </script>
+        let button = document.getElementById('button')
+
+        let select = document.getElementById('select')
+        for (let i = 0; i < data.length; i++) {
+            let option = document.createElement('option')
+            select.appendChild(option)
+            option.textContent = data[i].city.name
+
+
+        }
+
+        function addCity() {
+
+            let table = document.getElementById('table')
+            let select = document.getElementById("select");
+            let value = select.value;
+            for (let i = 0; i < data.length; i++) {
+                if (data[i].city.name == value) {
+                    console.log(data[i].main.temp)
+                    let tr = document.createElement('tr')
+                    let td = document.createElement('td')
+                    let td1 = document.createElement('td')
+                    let td2 = document.createElement('td')
+                    td.textContent = value;
+                    td1.textContent = data[i].main.temp;
+                    td2.textContent = data[i].wind.speed;
+                    tr.appendChild(td)
+                    tr.appendChild(td1)
+                    tr.appendChild(td2)
+                    table.appendChild(tr);
+
+                    let x = document.createElement('button');
+                    x.textContent = "X";
+                    tr.append(x);
+                    x.addEventListener('click', x2)
+                }
+            }
+
+        }
+        function x2() {
+            this.parentElement.remove();
+        }
+
+    </script>
+
+
 </body>
 
 </html>
