--- a/module4/15.html
+++ b/module4/15.html
@@ -5,7 +5,7 @@
 
 <body>
     <script>
-        let arr = [4, 5, 6, 4, 5, 6];
+        let arr = [4, 5, 6,4];
         let i = 0;
         let elem = 0;
         let j = 0;
