--- a/module4/2.html
+++ b/module4/2.html
@@ -1,26 +1,34 @@
 <html>
 
 <head>
+  <style>
+    div.box {
+      width: 42px;
+      height: 42px;
+      float: left;
+      margin: 0 2px 2px 0
+    }
+  </style>
 </head>
 
 <body>
-    <script>
-      let a = 1;
-      let b = 2;
-      let s = "123";
-      let arr = [1, [8]];
+  <button onclick="onClick()">Нажми меня</button>
+  <div id="container"></div>
+  <script>
+    function onClick() {
+      const div = document.createElement("div");
+      div.classList.add("box");
+      div.style = "background-color: " +
+        '#' + (Math.random().toString(16) + '000000').substring(2, 8).toUpperCase()
+        ;
+      document.getElementById("container").appendChild(div);
+    }
 
-    arr = f(a, arr);
+    
 
-    console.log( arr)
-
-      function f(i, j) {
-          i = 6;
-          j[1] = [77];
-
-            
-      }
-    </script>
+   
+ым
+  </script>
 </body>
 
 </html>
