--- a/test11.html
+++ b/test11.html
@@ -21,8 +21,9 @@
 <body>
 
 
-    <script src="D:\danila\Projects\javascript.learn\data.js"></script>
+    <script src="C:\Users\ДАНИЛА\Desktop\java.projects\javascript.learn-master\data.js"></script>
     <script>
+       
         let data = getData();
         let selectedCities = [];
         let table = document.getElementById('table')
