--- a/test10.html
+++ b/test10.html
@@ -27,7 +27,7 @@
 
     <script src=moment.js></script>
     <script>
-
+    
         const today = moment();
         const fromDate = today.clone().startOf('week');
         var counter = 0;
@@ -39,7 +39,19 @@
         var info = JSON.parse(window.localStorage.getItem('obj')) || {};
         render()
 
+
         function render() {
+            let body = document.getElementsByTagName("body")[0];
+            let table = document.createElement("table");
+            let tbody = document.createElement("tbody");
+            table.appendChild(tbody);
+            body.appendChild(table);
+            table.setAttribute("border", "2");
+            table.id = 'table'
+            table.bgColor = '#ce7fff';
+            table.cellSpacing = '0';
+            table.cellPadding = '5';
+            table.align = 'center';
             let h1 = document.getElementById('h1');
             h1.textContent = today.format("MMMM ,YYYY");
             renderHead();
@@ -105,7 +117,7 @@
             let button = document.createElement('button');
             button.textContent = "-";
 
-            button.addEventListener('click', function(event) {
+            button.addEventListener('click', function (event) {
                 let parentNode = event.target.parentNode,
                     value = parentNode.textContent,
                     index = obj[id].indexOf(value.substr(0, value.length - 1));
