--- a/tasks/test101.html
+++ b/tasks/test101.html
@@ -174,7 +174,7 @@
                         obj[id].color = color;
 
 
-                        window.localStorage.setItem('obj', JSON.stringify(obj));
+                        window.localStorage.setItem('obj', JSON.stringify([{name:"ghh"}]));
                         render();
                     }
                 });
@@ -205,17 +205,7 @@
 
 
 
-        /*
-                var i = 0;
-                let td = document.getElementById('td_' + i);
-                td.addEventListener('mousedown', function (event) {
-                    if (event.button === 1) {
-                        let id = ((reverseColors[td.bgColor] || 0) + 1) % 3;
-                        td.bgColor = colors[id];
-                        txtArea.style.backgroundColor = colors[id];
-                    }
-                });
-        */
+       
     </script>
 </body>
 
